# cxbridge

./: AGENTS.md  Cargo.toml  README.ja.md  README.md
.claude/: settings.json
.claude/agents/: mappings-auditor.md  rust-reviewer.md
.claude/rules/: code-style.md  docs.md  mappings.md  rust.md
.claude/skills/run-checks/: SKILL.md
.claude/skills/validate-mappings/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-version-bump.yml  release.yml
docs/: conversion-coverage.md  spec.md
mappings/: SCHEMA.md  hooks.yaml  mcp.yaml  memory.yaml  plugins.yaml  settings-config.yaml  skills.yaml  subagents.yaml  variables.yaml
reference/: 00-initial-integrated-report.md
scripts/: validate-mappings.py
src/: cli.rs  lib.rs  main.rs
src/core/: detect.rs  ir.rs  mappings.rs  mod.rs  model_tiers.rs  report.rs  transforms.rs
src/core/serialize/: frontmatter.rs  json.rs  mod.rs
src/degrade/: hooks_scope.rs  mod.rs  rules.rs  subagent.rs
src/handlers/: hooks.rs  mcp.rs  memory.rs  mod.rs  plugins.rs  settings.rs  skills.rs  subagents.rs
src/handlers/hooks/: lift.rs  lower.rs  mod.rs  toml_convert.rs
src/handlers/mcp/: lift.rs  lower.rs  mod.rs  parse.rs
src/handlers/memory/: import.rs  lift.rs  lower.rs  mod.rs
src/handlers/plugins/: index.rs  lift.rs  lower.rs  marketplace.rs  mod.rs
src/handlers/settings/: approval.rs  lift.rs  lower_c2x.rs  lower_x2c.rs  mod.rs
src/handlers/skills/: aux_files.rs  lower.rs  mod.rs
src/handlers/subagents/: lower_c2x.rs  lower_x2c.rs  mod.rs  parse.rs
src/scanner/: body.rs  body_rewrite.rs  mod.rs
tests/: batch_flags_scope.rs  check_direction.rs  cli.rs  cli_dir_input.rs  default_out_dir.rs  developer_instructions_degrade.rs  dir_input.rs  hooks.rs  hooks_all_hooks_dropped_event_classification.rs  hooks_args_dropped.rs  hooks_matcher_regex.rs  hooks_matcher_wildcard.rs  marketplace_npm_source_dropped.rs  mcp.rs  mcp_disabled_sentinel_leak.rs  mcp_dropped_warn_dedup.rs  memory.rs  memory_import_code_block.rs  no_duplicate_diagnostics.rs  only_filter.rs  plugins.rs  plugins_marketplace_dropped.rs  reconciliation_fixes.rs  report_flag.rs  roundtrip.rs  settings.rs  skills.rs  subagents.rs  subagents_dropped_warn.rs  webfetch_deny_domains.rs  write_plan.rs
tests/common/: mod.rs
tests/fixtures/claude/agents/: dropped_warn_fields.md  perm_accept_edits.md  perm_auto.md  perm_dont_ask.md
tests/fixtures/claude/env_http_headers_project/: .mcp.json
tests/fixtures/claude/hooks_all_http_dropped/: hooks.json
tests/fixtures/claude/hooks_args_drop/: hooks.json
tests/fixtures/claude/hooks_regex_matcher/: hooks.json
tests/fixtures/claude/hooks_wildcard/: hooks.json
tests/fixtures/claude/mcp_dropped_warn_fields/: .mcp.json
tests/fixtures/claude/webfetch_deny/: settings.json
tests/fixtures/codex/: config.toml  hooks.json  settings.toml
tests/fixtures/codex/.codex-plugin/: plugin.json
tests/snapshots/: skills__skill_c2x_report_summary.snap
(+17 files in other folders)
