[package]
name = "cxbridge"
version = "0.3.1"
edition = "2021"
description = "Claude Code ⇄ Codex config file bidirectional conversion CLI"
authors = ["Ryuya Ikeda <rikeda71@gmail.com>"]
license = "MIT"
repository = "https://github.com/rikeda71/cxbridge"
homepage = "https://github.com/rikeda71/cxbridge"
documentation = "https://github.com/rikeda71/cxbridge/blob/main/docs/spec.md"
readme = "README.md"
keywords = ["claude-code", "codex", "config", "converter", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cxbridge"
path = "src/main.rs"

[lib]
name = "cxbridge"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde-saphyr = "0.0.27"
toml = "1.1"
toml_edit = "0.25"
gray_matter = "0.3"
regex = "1"
once_cell = "1"
anyhow = "1"
dialoguer = "0.12"
walkdir = "2"
shlex = "2"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3.27.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
